First trying_version2

--- a/개발자홈페이지.html
+++ b/개발자홈페이지.html
@@ -4,11 +4,20 @@
 <head>
   <title>개발자 홈페이지</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129407582-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129407582-2');
+</script>
 </head>
 
 <body>
 
-<h1>WEB</h1>
+<h1>HCI전문가 이명준 입니다.</h1>
 <ol>
   <li><a href="main.html">HTML</a></li>
   <li><a href="css.html">CSS</a></li>
