--- a/css.html
+++ b/css.html
@@ -4,6 +4,15 @@
 <head>
   <title>web-html</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129407582-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-129407582-2');
+</script>
 </head>
 
 <body>
